package org.g16.MonopolyJR.Fields;

public enum Color {
    Red,
    Blue,
    Yellow,
    DarkBlue,
    Pink,
    Brown,
    Green,
    Orange
}
