package org.g16.MonopolyJR;

public class Jail extends Field {
    public Jail(String name) {
        super(name);
    }
}