package org.g16.MonopolyJR;

public enum Token {
    Car,
    Tractor,
    Racecar,
    Ufo
}
