package org.g16.MonopolyJR;
public class VisitorField extends Field{
    public VisitorField(String name) {
        super(name);
    }
}
